--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ author:         'Adler Santos'
 authorTwitter:  'adlersantos'
 
 permalink:       /:title/
+gems: [jekyll-paginate]
 
 defaults:
     -
